--- a/src/app/modules/composer/components/preview/preview.component.scss
+++ b/src/app/modules/composer/components/preview/preview.component.scss
@@ -1,7 +1,7 @@
 .m-composer__preview {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 330px;
 
   @include m-theme() {
     background-color: themed($m-bgColor--primary);
@@ -33,6 +33,17 @@
       background-color: themed($m-bgColor--primary);
       color: themed($m-textColor--secondary);
       border-color: themed($m-borderColor--primary);
+    }
+  }
+
+  .m-videoPlayer__placeholder {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: transparent;
+    i {
+      cursor: not-allowed;
     }
   }
 }
