--- a/src/app/modules/search/bar.component.html
+++ b/src/app/modules/search/bar.component.html
@@ -19,7 +19,7 @@
     type="text"
     id="search"
     autocomplete="off"
-    placeholder="Search Minds"
+    [placeholder]="placeholder"
     #searchInput
   />
   <label class="mdl-textfield__label" for="search"></label>
