--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,6 +1,7 @@
 @import 'defaults';
 @import 'fonts';
 @import '~ng-pick-datetime/assets/style/picker.min.css';
+@import '../app/common/layout/layout';
 
 body.m-theme__light,
 body .m-theme--wrapper.m-theme--wrapper__light {
