--- a/src/app/common/components/overlay-modal/overlay-modal.component.scss
+++ b/src/app/common/components/overlay-modal/overlay-modal.component.scss
@@ -86,12 +86,12 @@
 
 .m-overlay-modal--close {
   position: absolute;
-  top: $minds-padding * 2;
-  right: $minds-padding * 2;
+  top: 10px;
+  right: 10px;
   z-index: 99999999;
 
   display: inline-block;
-  padding: $minds-padding;
+  padding: 10px;
   border-radius: 4px;
 
   cursor: pointer;
