--- a/src/app/common/layout/layout.scss
+++ b/src/app/common/layout/layout.scss
@@ -128,6 +128,7 @@ $layoutRightFullWidth: 310px;
   .m-pageLayout__pane--left {
     border-right: 0;
     width: auto;
+    min-width: 0;
   }
   .m-pageLayout__pane--main {
     min-width: 0;
@@ -148,6 +149,10 @@ $layoutRightFullWidth: 310px;
     display: block;
     @include m-theme() {
       color: themed($m-textColor--secondary);
+    }
+
+    @media screen and (max-width: $layoutMin3ColWidth) {
+      padding: 20px 20px 0;
     }
   }
   i,
