--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -10,7 +10,7 @@
   <nav>
     <div class="m-sidebarNavigation__top">
       <a routerLink="/" title="Home" i18n-title>
-        <img [src]="cdnUrl + 'assets/logos/bulb.svg'" />
+        <img [src]="cdnAssetsUrl + 'assets/logos/bulb.svg'" />
       </a>
 
       <i class="material-icons" (click)="toggle()">close</i>
