--- a/src/app/modules/discovery/feeds/feed-item.component.scss
+++ b/src/app/modules/discovery/feeds/feed-item.component.scss
@@ -4,6 +4,10 @@
     border-bottom: 1px solid themed($m-borderColor--primary);
   }
 
+  @media screen and (max-width: $layoutMin3ColWidth) {
+    padding: 20px;
+  }
+
   &.m-discovery__feedItem--user,
   &.m-discovery__feedItem--group {
     a {
