--- a/src/app/modules/newsfeed/activity/metrics/metrics.component.scss
+++ b/src/app/modules/newsfeed/activity/metrics/metrics.component.scss
@@ -4,3 +4,9 @@ m-activity__metrics > span {
     color: themed($m-textColor--tertiary);
   }
 }
+
+.m-activityMetrics__views {
+  @media screen and (max-width: $max-mobile) {
+    display: none;
+  }
+}
