--- a/src/app/modules/newsfeed/newsfeed.component.scss
+++ b/src/app/modules/newsfeed/newsfeed.component.scss
@@ -201,8 +201,8 @@ m-newsfeed {
 .m-theme__2020 .m-newsfeed {
   [class*='m-pageLayout__pane'] {
     padding: 20px 40px;
-    @media screen and (max-width: $max-mobile) {
-      padding: 20px 0;
+    @media screen and (max-width: $layoutMin3ColWidth) {
+      padding: 20px;
     }
   }
   .m-pageLayout__pane--main {
