(chore): add to canary page

--- a/src/app/modules/canary/page.component.html
+++ b/src/app/modules/canary/page.component.html
@@ -45,7 +45,10 @@
           <h2>Experiments</h2>
           <ul class="m-canaryExperiments__list">
             <li>
-              Server Side Rendering - 5th Feb 2020
+              Navigation, Composer, Discovery, Wallet - 7th April 2020
+              <a href="https://gitlab.com/groups/minds/-/epics/133"
+                >(Epic 133)</a
+              >
             </li>
           </ul>
         </div>
