--- a/src/app/modules/composer/components/toolbar/toolbar.component.scss
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.scss
@@ -43,6 +43,10 @@
     }
   }
 
+  m-button.m-composerToolbar__action {
+    height: 34px;
+  }
+
   .m-composerToolbar__item {
     margin-right: 25px;
 
