--- a/src/app/modules/legacy/components/cards/activity/activity.html
+++ b/src/app/modules/legacy/components/cards/activity/activity.html
@@ -99,6 +99,29 @@
 ></m-wire--lock-screen>
 
 <ng-container *ngIf="!activity.paywall || editing">
+  <!-- Title -->
+  <div
+    class="mdl-card__supporting-text message"
+    [hidden]="!activity.title || activity.perma_url || editing"
+  >
+    <a
+      class="m-mature-text-toggle"
+      (click)="toggleMatureVisibility()"
+      *ngIf="!activity.message && (attachment.shouldBeBlurred(activity) || attachment.isForcefullyShown(activity))"
+      [ngClass]="{ 'mdl-color-text--red-500': attachment.isForcefullyShown(activity) }"
+    >
+      <i class="material-icons m-material-icons-inline">explicit</i>
+    </a>
+
+    <span
+      class="m-mature-message-content"
+      [innerHtml]="activity.title | tags"
+      [ngClass]="{ 'm-mature-text': attachment.shouldBeBlurred(activity) }"
+      (click)="activity.mature && !activity.mature_visibility ? toggleMatureVisibility(): null"
+    >
+    </span>
+  </div>
+
   <!-- Messages -->
 
   <div
@@ -229,27 +252,6 @@
     </minds-rich-embed>
   </div>
 
-  <div
-    class="mdl-card__supporting-text message"
-    [hidden]="!activity.title || activity.perma_url || editing"
-  >
-    <a
-      class="m-mature-text-toggle"
-      (click)="toggleMatureVisibility()"
-      *ngIf="!activity.message && (attachment.shouldBeBlurred(activity) || attachment.isForcefullyShown(activity))"
-      [ngClass]="{ 'mdl-color-text--red-500': attachment.isForcefullyShown(activity) }"
-    >
-      <i class="material-icons m-material-icons-inline">explicit</i>
-    </a>
-
-    <span
-      class="m-mature-message-content"
-      [innerHtml]="activity.title | tags"
-      [ngClass]="{ 'm-mature-text': attachment.shouldBeBlurred(activity) }"
-      (click)="activity.mature && !activity.mature_visibility ? toggleMatureVisibility(): null"
-    >
-    </span>
-  </div>
   <!-- Translation -->
   <div
     *ngIf="translate && translate.translation && translate.translation.translated && translate.translation.title"
