--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -93,6 +93,12 @@ m-activity__content {
   }
 }
 
+.m-activityContent__mediaTitle {
+  &:not(.m-activityContent__mediaTitle--noDescription) {
+    font-weight: 500;
+  }
+}
+
 .m-activityContent__media--video {
   .m-videoPlayer__placeholder {
     padding-top: 56.25%;
