Blog epic tests

--- a/src/app/modules/blogs/ckeditor/editor/editor.component.html
+++ b/src/app/modules/blogs/ckeditor/editor/editor.component.html
@@ -4,5 +4,6 @@
     [ngModel]="content"
     (ngModelChange)="onContentChanged($event)"
     [editor]="Editor"
+    data-cy="data-minds-ckeditor-input"
   ></ckeditor>
 </div>
