(fix): pro sites should still use new navigation - closes #2833

--- a/src/app/modules/newsfeed/feeds/entity.component.html
+++ b/src/app/modules/newsfeed/feeds/entity.component.html
@@ -12,7 +12,10 @@
       [displayOptions]="displayOptions"
       [allowAutoplayOnScroll]="allowAutoplayOnScroll"
       (deleted)="delete($event)"
-      *mIfFeature="'navigation'; else v1"
+      *ngIf="
+        displayOptions.v2 === true || featuresService.has('navigation');
+        else v1
+      "
     >
     </m-activity>
     <ng-template #v1>
