(fix): #2834 - views not being recorded on new entities

--- a/src/app/modules/groups/profile/feed/sorted.component.html
+++ b/src/app/modules/groups/profile/feed/sorted.component.html
@@ -64,6 +64,7 @@
             showOnlyCommentsInput: true
           }"
           [allowAutoplayOnScroll]="true"
+          [slot]="i + 1"
         ></m-activity>
       </ng-container>
     </ng-container>
