--- a/src/app/modules/newsfeed/feeds/entity.component.html
+++ b/src/app/modules/newsfeed/feeds/entity.component.html
@@ -12,6 +12,7 @@
       [displayOptions]="displayOptions"
       [allowAutoplayOnScroll]="allowAutoplayOnScroll"
       (deleted)="delete($event)"
+      [slot]="slot"
       *ngIf="
         displayOptions.v2 === true || featuresService.has('navigation');
         else v1
