--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -70,6 +70,7 @@
           showOnlyCommentsInput: true
         }"
         [allowAutoplayOnScroll]="true"
+        [slot]="i + 1"
       ></m-activity>
     </ng-container>
     <ng-template #legacyActivity>
