--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -64,6 +64,7 @@
         }"
         [allowAutoplayOnScroll]="false"
         [autoplayVideo]="true"
+        [slot]="1"
       ></m-activity>
     </div>
   </div>
