--- a/src/app/modules/newsfeed/feeds/boost.component.html
+++ b/src/app/modules/newsfeed/feeds/boost.component.html
@@ -21,6 +21,7 @@
           showOnlyCommentsInput: true
         }"
         [allowAutoplayOnScroll]="true"
+        [slot]="i + 1"
       ></m-activity>
     </ng-container>
     <ng-template #legacyActivity>
