--- a/src/app/modules/homepage-v2/homepage-v2.component.scss
+++ b/src/app/modules/homepage-v2/homepage-v2.component.scss
@@ -547,9 +547,6 @@ m-homepage__v2 {
 
     &.m-homepage__joinButton--first {
       margin: 22px 0 0 0;
-      @media screen and (max-width: $m-grid-max-mobile) {
-        display: none;
-      }
     }
   }
 
@@ -575,6 +572,7 @@ m-homepage__v2 {
 
     @media screen and(max-width: 680px) {
       margin-top: 5vw;
+      margin-bottom: 10vh;
     }
 
     & > a:first-child {
