(feat): Channel module, service and main component

--- a/src/app/modules/channel-container/channel-container.component.html
+++ b/src/app/modules/channel-container/channel-container.component.html
@@ -10,7 +10,12 @@
       else isProChannel
     "
   >
-    <m-channel [user]="channel" #channelComponent></m-channel>
+    <ng-container *mIfFeature="'channels'; else v1ChannelTemplate">
+      <m-channel-v2 [channel]="channel" #v2ChannelComponent></m-channel-v2>
+    </ng-container>
+    <ng-template #v1ChannelTemplate>
+      <m-channel [user]="channel" #v1ChannelComponent></m-channel>
+    </ng-template>
   </ng-container>
   <ng-template #isProChannel>
     <m-pro--channel #proChannelComponent></m-pro--channel>
