--- a/src/stylesheets/themes.scss
+++ b/src/stylesheets/themes.scss
@@ -101,6 +101,7 @@ $themes: (
     m-borderColor--tertiary: #ececec,
     m-alert: #e03c20,
     m-link: #1b85d6,
+    m-positive: #95c064,
     m-btn--primary: #5dbac0,
     m-btn--primaryText: #ffffff,
     // legacy colors
@@ -171,6 +172,7 @@ $themes: (
     m-borderColor--tertiary: #202527,
     m-alert: #e03c20,
     m-link: #1b85d6,
+    m-positive: #95c064,
     m-btn--primary: #5dbac0,
     m-btn--primaryText: #ffffff,
     // legacy colors
@@ -303,6 +305,7 @@ $m-borderColor--secondary: 'm-borderColor--secondary';
 $m-borderColor--tertiary: 'm-borderColor--tertiary';
 $m-alert: 'm-alert';
 $m-link: 'm-link';
+$m-positive: 'm-positive';
 $m-btn--primary: 'm-btn--primary';
 $m-btn--primaryText: 'm-btn--primaryText';
 
