Fixed remove user modal in groups #2368

--- a/src/app/common/components/post-menu/post-menu.component.html
+++ b/src/app/common/components/post-menu/post-menu.component.html
@@ -1,6 +1,7 @@
 <button
   class="mdl-button minds-more mdl-button--icon mdl-color-text--blue-grey-300"
   (click)="cardMenuHandler()"
+  data-cy="data-minds-post-menu-button"
 >
   <i class="material-icons">keyboard_arrow_down</i>
 </button>
