--- a/src/app/modules/groups/kick-modal/kick-modal.component.html
+++ b/src/app/modules/groups/kick-modal/kick-modal.component.html
@@ -21,6 +21,7 @@
       <button
         (click)="kick(ban.checked)"
         class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
+        data-cy="data-minds-kick-modal-confirm"
       >
         <ng-container i18n="@@M__ACTION__CONFIRM">Confirm</ng-container>
       </button>
@@ -47,9 +48,10 @@
       <button
         (click)="emitClose()"
         class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
+        data-cy="data-minds-kick-modal-okay"
       >
         <ng-container i18n="@@GROUPS__PROFILE__FEED__OK_ACTION"
-          >Ok</ng-container
+          >Okay</ng-container
         >
       </button>
     </div>
