--- a/src/app/modules/groups/profile/feed/sorted.component.html
+++ b/src/app/modules/groups/profile/feed/sorted.component.html
@@ -98,8 +98,9 @@
               post-menu
               class="mdl-menu__item"
               *ngIf="group['is:owner'] && (entity | async)"
-              (click)="kick(entity?.ownerObj)"
+              (click)="kick(entity)"
               i18n="@@GROUPS__PROFILE__FEED__REMOVE_USER"
+              data-cy="data-minds-group-dropdown-remove"
             >
               Remove user
             </li>
@@ -121,5 +122,5 @@
   *ngIf="kicking"
   [user]="kicking"
   [group]="group"
-  (closed)="kick(null)"
+  (closed)="kick()"
 ></m-groups__kick-modal>
