(chore): group link on canary page - closes #2830

--- a/src/app/modules/canary/page.component.html
+++ b/src/app/modules/canary/page.component.html
@@ -23,6 +23,13 @@
           >
             Turn off
           </button>
+          <a
+            class="m-btn m-btn--slim"
+            routerLink="/groups/profile/1003662081932754944/feed"
+          >
+            <span>Canaries Group</span>
+            <i class="material-icons">chevron_right</i>
+          </a>
         </div>
       </div>
     </div>
