--- a/src/app/modules/canary/page.component.scss
+++ b/src/app/modules/canary/page.component.scss
@@ -63,5 +63,18 @@
       color: themed($m-white-always);
       border-color: rgba(themed($m-white-always), 0.7);
     }
+    margin-right: 20px;
+
+    > span,
+    i {
+      vertical-align: middle;
+    }
+    i {
+      width: 14px;
+    }
+  }
+
+  a.m-btn {
+    text-decoration: none;
   }
 }
