(fix): BEM for sub-components

--- a/src/app/modules/channels/v2/channel.component.html
+++ b/src/app/modules/channels/v2/channel.component.html
@@ -1,5 +1,5 @@
 <div class="m-channel-v2">
-  <m-channelHeading></m-channelHeading>
+  <m-channel__heading></m-channel__heading>
 
   <div class="m-channel__tabs m-tabs__container">
     <div class="m-tabs__tab">
