(feat): Tab navigation

--- a/src/app/modules/channels/v2/channel.component.html
+++ b/src/app/modules/channels/v2/channel.component.html
@@ -1,17 +1,44 @@
-<div class="m-channel-v2">
+<div *ngIf="service.channel$ | async" class="m-channel-v2">
   <m-channel__heading></m-channel__heading>
 
-  <div class="m-channel__tabs m-tabs__container">
+  <div
+    *ngIf="service.username$ | async as username"
+    class="m-channel__tabs m-tabs__container"
+  >
     <div class="m-tabs__tab">
-      <a i18n>Feed</a>
+      <a
+        [routerLink]="['/', username, '']"
+        routerLinkActive="m-tabs__tab--selected"
+        [routerLinkActiveOptions]="{ __change_detection_hack__: username }"
+        i18n
+        >Feed</a
+      >
     </div>
 
     <div class="m-tabs__tab" *ngIf="false">
-      <a i18n>Shop</a>
+      <a
+        [routerLink]="['/', username, 'shop']"
+        routerLinkActive="m-tabs__tab--selected"
+        [routerLinkActiveOptions]="{ __change_detection_hack__: username }"
+        i18n
+        >Shop</a
+      >
     </div>
 
     <div class="m-tabs__tab">
-      <a i18n>About</a>
+      <a
+        [routerLink]="['/', username, 'about']"
+        routerLinkActive="m-tabs__tab--selected"
+        [routerLinkActiveOptions]="{ __change_detection_hack__: username }"
+        i18n
+        >About</a
+      >
     </div>
   </div>
+
+  <ng-container [ngSwitch]="view$ | async">
+    <m-channel__feed *ngSwitchCase="'feed'"></m-channel__feed>
+    <m-channel__shop *ngSwitchCase="'shop'"></m-channel__shop>
+    <m-channel__about *ngSwitchCase="'about'"></m-channel__about>
+  </ng-container>
 </div>
