(feat): skip steps that have already been finished (feat): autocomplete inputs in /info with already saved data and disable them (feat): introduce OnboardingWrapperService for handling both versions (feat): spec tests

--- a/src/app/common/components/phone-input-v2/phone-input-v2.component.html
+++ b/src/app/common/components/phone-input-v2/phone-input-v2.component.html
@@ -13,6 +13,7 @@
     (countrySelected)="countrySelected($event)"
     (toggledDropdown)="toggledDropdown($event)"
     [showDropdown]="showDropdown"
+    [disabled]="disabled"
   ></m-phoneInput__country>
 
   <input
@@ -27,6 +28,7 @@
     class="form-control m-phoneInput__input"
     (click)="clickedInput($event)"
     (focusout)="inputFocused = false"
+    [disabled]="disabled"
     #input
   />
 </div>
