--- a/src/app/modules/onboarding-v2/page/onboarding.component.html
+++ b/src/app/modules/onboarding-v2/page/onboarding.component.html
@@ -10,7 +10,7 @@
           </h2>
 
           <m-onboarding__progressbar
-            [steps]="steps"
+            [steps]="onboardingService.steps"
           ></m-onboarding__progressbar>
         </ng-container>
         <router-outlet></router-outlet>
