--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -5,6 +5,9 @@
   [class.is-pro-domain]="isProDomain"
 >
   <m-emailConfirmation *ngIf="!isProDomain"></m-emailConfirmation>
+  <m-onboardingReminder
+    *ngIf="!isProDomain && featuresService.has('onboarding-reminder')"
+  ></m-onboardingReminder>
   <m-announcement [id]="'festival:sale'" *mIfFeature="'radiocity'">
     <span
       class="m-blockchain--wallet-address-notice--action"
