Added styling for table

--- a/src/app/modules/blogs/view/view.scss
+++ b/src/app/modules/blogs/view/view.scss
@@ -25,3 +25,15 @@
     color: themed($m-green-light);
   }
 }
+
+table {
+  display: inline-flex;
+
+  td {
+    padding: 8px 16px;
+
+    @include m-theme() {
+      border: 1px solid themed($m-black);
+    }
+  }
+}
