(feat): Service session and action bar

--- a/src/app/common/components/button-v2/button.component.scss
+++ b/src/app/common/components/button-v2/button.component.scss
@@ -95,3 +95,43 @@ m-button {
     }
   }
 }
+
+.m-button-v2 {
+  display: inline-block;
+  font-size: 1em;
+  line-height: calc(1em + 5px);
+  border-radius: calc(1em + 4px);
+  padding: 7px 20px;
+  cursor: pointer;
+
+  &.m-button-v2--iconOnly {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: calc(1em + 16px);
+    height: calc(1em + 16px);
+    padding: 0;
+  }
+
+  @include m-theme() {
+    color: themed($m-textColor--primary);
+    background-color: themed($m-bgColor--primary);
+
+    &.m-button-v2--transparent {
+      background: rgba(themed($m-bgColor--primary), 0.9);
+    }
+
+    &.m-button-v2--positive {
+      color: themed($m-white-always);
+      background: themed($m-positive);
+    }
+  }
+
+  @include m-on-theme(light) {
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+  }
+
+  @include m-on-theme(dark) {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  }
+}
