--- a/src/app/modules/channels/v2/heading/heading.component.html
+++ b/src/app/modules/channels/v2/heading/heading.component.html
@@ -10,6 +10,8 @@
       [object]="channel"
       [editMode]="false"
     ></minds-avatar>
+
+    <ng-content></ng-content>
   </div>
 
   <div class="m-channelHeading__info">
