--- a/src/app/modules/composer/components/base/base.component.scss
+++ b/src/app/modules/composer/components/base/base.component.scss
@@ -23,6 +23,7 @@ m-composer__base {
     flex-direction: column;
     width: 100%;
     height: 100%;
+    min-height: 100%;
   }
 
   m-composer__titleBar {
