--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -6,7 +6,11 @@
     <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
   </div>
 
-  <div class="m-error-splash" *ngIf="error && !inProgress">
+  <div
+    class="m-error-splash"
+    [class.m-pageLayout__pane--main]="!showLegacyActivity"
+    *ngIf="error && !inProgress"
+  >
     <img [src]="cdnAssetsUrl + 'assets/logos/logo.svg'" />
     <h3 class="mdl-color-text--red-300">{{ error }}</h3>
     <span
@@ -65,6 +69,7 @@
         [allowAutoplayOnScroll]="false"
         [autoplayVideo]="true"
         [slot]="1"
+        (deleted)="delete($event)"
       ></m-activity>
     </div>
   </div>
