(fix): use string for code to account for 0 being at start of code - closes #2872

--- a/src/app/modules/onboarding-v2/steps/info/phone-input/input.component.html
+++ b/src/app/modules/onboarding-v2/steps/info/phone-input/input.component.html
@@ -64,7 +64,7 @@
 
     <div class="m-onboarding__input">
       <input
-        type="number"
+        type="text"
         [ngModel]="code"
         (ngModelChange)="codeChange($event)"
         placeholder="eg. 198349"
