--- a/src/app/modules/channels/v2/actions/actions.component.html
+++ b/src/app/modules/channels/v2/actions/actions.component.html
@@ -3,9 +3,7 @@
     <m-channelActions__edit></m-channelActions__edit>
   </ng-container>
   <ng-template #nonOwner>
-    <m-channelActions__menuButton
-      *ngIf="!(service.isSubscribed$ | async)"
-    ></m-channelActions__menuButton>
+    <m-channelActions__menuButton></m-channelActions__menuButton>
     <m-channelActions__wire></m-channelActions__wire>
     <m-channelActions__message
       *ngIf="service.isSubscribed$ | async"
