--- a/src/app/modules/channels/v2/actions/subscribe.component.html
+++ b/src/app/modules/channels/v2/actions/subscribe.component.html
@@ -1,9 +1,7 @@
 <ng-container *ngIf="service.isSubscribed$ | async; else unsubscribedAction">
-  <m-channelActions__menu>
-    <a class="m-button-v2" i18n>
-      Subscribed
-    </a>
-  </m-channelActions__menu>
+  <a class="m-button-v2 m-button-v2--notInteractive" i18n>
+    Subscribed
+  </a>
 </ng-container>
 
 <ng-template #unsubscribedAction>
