--- a/src/app/modules/channels/v2/header/header.component.scss
+++ b/src/app/modules/channels/v2/header/header.component.scss
@@ -85,6 +85,13 @@
     }
   }
 
+  .m-channelHeaderInfoName__badges {
+    i.material-icons {
+      font-size: 18px;
+      padding: 0 0 0 6px;
+    }
+  }
+
   .m-channelHeaderInfo__username {
     padding: 0;
     margin: 0;
