--- a/src/app/modules/channels/v2/actions/menu.component.html
+++ b/src/app/modules/channels/v2/actions/menu.component.html
@@ -4,17 +4,31 @@
 
 <ng-template #actionsDropdown>
   <ul>
-    <li *ngIf="service.isSubscribed$ | async">
+    <li *ngIf="service.isSubscribed$ | async" (click)="unsubscribe()">
       <span class="m-dropdownMenu__item">
         <span i18n>Unsubscribe</span>
       </span>
     </li>
-    <li>
-      <span class="m-dropdownMenu__item">
-        <span i18n>Block</span>
-      </span>
-    </li>
-    <li>
+
+    <ng-container *ngIf="!(service.isAdmin$ | async)">
+      <li
+        *ngIf="service.isBlocked$ | async; else blockOption"
+        (click)="unblock()"
+      >
+        <span class="m-dropdownMenu__item">
+          <span i18n>Unblock</span>
+        </span>
+      </li>
+      <ng-template #blockOption>
+        <li (click)="block()">
+          <span class="m-dropdownMenu__item">
+            <span i18n>Block</span>
+          </span>
+        </li>
+      </ng-template>
+    </ng-container>
+
+    <li *ngIf="!(service.isAdmin$ | async)" (click)="report()">
       <span class="m-dropdownMenu__item">
         <span i18n>Report</span>
       </span>
