(fix): Uncaught (in promise) DOMException: The play() request was interrupted by a call to pause(). play() returns a promise and we need to handle it

--- a/src/app/modules/discovery/feeds/feeds.component.html
+++ b/src/app/modules/discovery/feeds/feeds.component.html
@@ -23,6 +23,7 @@
   <m-discovery__feedItem
     *ngFor="let entity$ of entities$ | async"
     [entity]="entity$ | async"
+    [allowAutoplayOnScroll]="true"
     [openComments]="false"
   ></m-discovery__feedItem>
 
