--- a/src/app/modules/discovery/trends/trend/trend.component.html
+++ b/src/app/modules/discovery/trends/trend/trend.component.html
@@ -10,5 +10,6 @@
   <m-discovery__feedItem
     [entity]="entity$ | async"
     [openComments]="true"
+    [allowAutoplayOnScroll]="true"
   ></m-discovery__feedItem>
 </div>
