--- a/src/app/modules/discovery/feeds/feed-item.component.html
+++ b/src/app/modules/discovery/feeds/feed-item.component.html
@@ -62,6 +62,7 @@
       <m-activity
         [entity]="entity"
         [displayOptions]="{ showOnlyCommentsInput: !openComments }"
+        [allowAutoplayOnScroll]="allowAutoplayOnScroll"
       ></m-activity>
     </ng-template>
   </ng-container>
