--- a/src/app/modules/blockchain/token-purchase/purchase.component.html
+++ b/src/app/modules/blockchain/token-purchase/purchase.component.html
@@ -32,6 +32,10 @@
   </div>
 </div>
 
+<div class="m-purchase-sendWyre__errorContainer">
+  <span class="m-purchase-sendWyre__errorText">{{ sendWyreError }}</span>
+</div>
+
 <div class="m-blockchainTokenPurchase__ethRate" ngPreserveWhitespaces>
   <span i18n>
     {tokens, plural, =1 {{{tokens | number}} token} other
