--- a/src/app/modules/channels/v2/channel.component.html
+++ b/src/app/modules/channels/v2/channel.component.html
@@ -10,9 +10,10 @@
     >
       <div class="m-tabs__tab">
         <a
+          [class.m-tabs__tab--selected]="
+            ['shop', 'about'].indexOf(view$ | async) === -1
+          "
           [routerLink]="['/', username, '']"
-          routerLinkActive="m-tabs__tab--selected"
-          [routerLinkActiveOptions]="{ __change_detection_hack__: username }"
           i18n
           >Feed</a
         >
@@ -40,9 +41,12 @@
     </div>
 
     <ng-container [ngSwitch]="view$ | async">
-      <m-channel__feed *ngSwitchCase="'feed'"></m-channel__feed>
       <m-channel__shop *ngSwitchCase="'shop'"></m-channel__shop>
       <m-channel__about *ngSwitchCase="'about'"></m-channel__about>
+      <m-channel__feed
+        [view]="view$ | async"
+        *ngSwitchDefault
+      ></m-channel__feed>
     </ng-container>
   </ng-container>
 
